@@ -188,6 +188,10 @@ extern unsigned long max_debug_file_size;
 extern int allow_empty_hostgroup_assignment;
 
 extern int host_down_disable_service_checks;
+extern int service_skip_check_dependency_status;
+extern int service_skip_check_parent_status;
+extern int service_skip_check_host_down_status;
+extern int host_skip_check_dependency_status;
 
 extern time_t last_program_stop;
 extern time_t event_start;
